--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             color: white;
             padding: 15px 50px;
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: center;
+            margin-bottom: 50px;
         }
 
         .header a {
@@ -140,11 +141,11 @@
 
     <section class="slider-container">
         <div class="slide-track">
-            <div class="slide"><img src="https://via.placeholder.com/1920x400/FF5733/FFFFFF?text=Slide+1" alt="Slide 1"></div>
-            <div class="slide"><img src="https://via.placeholder.com/1920x400/33FF57/FFFFFF?text=Slide+2" alt="Slide 2"></div>
-            <div class="slide"><img src="https://via.placeholder.com/1920x400/3357FF/FFFFFF?text=Slide+3" alt="Slide 3"></div>
-            <div class="slide"><img src="https://via.placeholder.com/1920x400/FF33A1/FFFFFF?text=Slide+4" alt="Slide 4"></div>
-            <div class="slide"><img src="https://via.placeholder.com/1920x400/33FFF6/FFFFFF?text=Slide+5" alt="Slide 5"></div>
+            <div class="slide"><img src="https://drive.google.com/file/d/1hATugobexwFGcoJATL6w3ldWZfmOstmk/view?usp=drive_link" alt="Slide 1"></div>
+            <div class="slide"><img src="https://drive.google.com/file/d/1GzLZfofnLWoBDaDoooAJbcfh0RsrRbp1/view?usp=drive_link" alt="Slide 2"></div>
+            <div class="slide"><img src="https://drive.google.com/file/d/1eWmnRSZe50a_JTHpN0F9VWY84OKSaE6J/view?usp=drive_link" alt="Slide 3"></div>
+            <div class="slide"><img src="https://drive.google.com/file/d/1GxdYVbvqqYOs31EmQcDMA_tjRMHI7d7q/view?usp=drive_link" alt="Slide 4"></div>
+            <div class="slide"><img src="https://drive.google.com/file/d/1lYvINIwbtDhb1QXP3-D2trOysNP2TfGj/view?usp=drive_link" alt="Slide 5"></div>
         </div>
     </section>
 
