--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <section class="slider-container">
         <div class="slide-track">
-            <div class="slide"><img src="https://drive.google.com/file/d/1hATugobexwFGcoJATL6w3ldWZfmOstmk/view?usp=drive_link" alt="Slide 1"></div>
+            <div class="slide"><img src="https://drive.google.com/file/d/1eWmnRSZe50a_JTHpN0F9VWY84OKSaE6J/view" alt="Slide 1"></div>
             <div class="slide"><img src="https://drive.google.com/file/d/1GzLZfofnLWoBDaDoooAJbcfh0RsrRbp1/view?usp=drive_link" alt="Slide 2"></div>
             <div class="slide"><img src="https://drive.google.com/file/d/1eWmnRSZe50a_JTHpN0F9VWY84OKSaE6J/view?usp=drive_link" alt="Slide 3"></div>
             <div class="slide"><img src="https://drive.google.com/file/d/1GxdYVbvqqYOs31EmQcDMA_tjRMHI7d7q/view?usp=drive_link" alt="Slide 4"></div>
