--- a/html/index.html
+++ b/html/index.html
@@ -122,7 +122,7 @@
                     LƯU PHƯỚC TÂM
                 </h1>
                 <p class="mt-2 text-xl font-medium text-gray-300">
-                    "Tài Sản Vô Giá" - **Senior Full-Stack Developer**
+                    **Senior Full-Stack Developer**
                 </p>
                 <p class="mt-4 text-gray-400 max-w-2xl">
                     Chuyên gia kiến tạo các "Dự án Công nghệ" có giá trị bền vững và khả năng sinh lời cao. Đã triển khai thành công 5+ "Công trình" quy mô lớn trong lĩnh vực FinTech và SaaS.
